--- a/index.html
+++ b/index.html
@@ -1,36 +1,20 @@
 <!DOCTYPE html>
-<html lang="en">
 <head>
-    <title>HTML Guide Example</title>
-    <link href="favicon.ico">
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <script src="script.js"></script>
+  <title>My New Website</title>
 </head>
 <body>
-    <h1>Welcome to the HTML Guide Example</h1>
-    <div style="direction: column; align-items: center; gap: 20px;">
-        <p style="color: #333; font-size: 16px; font-family: Arial, sans-serif; font-weight: normal;">
-            This is an example paragraph to demonstrate the supported HTML tags and CSS properties.
-        </p>
-        <img src="example.jpg" alt="Example Image" style="border-radius: 10px; border-width: 2px; border-color: #000; border-style: solid;">
-        <hr>
-        <ul style="padding: 0; list-style: none;">
-            <li style="margin-bottom: 10px;">Item 1</li>
-            <li style="margin-bottom: 10px;">Item 2</li>
-            <li style="margin-bottom: 10px;">Item 3</li>
-        </ul>
-        <div>
-            <input type="text" placeholder="Enter text" style="width: 200px; height: 30px; padding: 5px; margin-bottom: 10px;">
-            <textarea placeholder="Enter more text" style="width: 200px; height: 100px; padding: 5px;"></textarea>
-        </div>
-        <button style="padding: 10px 20px; font-size: 16px;">Submit</button>
-    </div>
-    <script>
-        local test = get("button")
-        test.on_click(function() {
-            print("Button clicked!")
-        })
-    </script>
+  <h1>Welcome!</h1>
+  <p>This is a simple webpage built with the new protocol.</p>
+  <button>Click Me!</button>
+  <hr>
+  <img src="/path/to/image.jpg" alt="Image Description">
+  <div>
+    <h2>More Content</h2>
+    <ul>
+      <li>Item 1</li>
+      <li>Item 2</li>
+    </ul>
+  </div>
+  <textarea id="outputText" rows="5" cols="40"></textarea>
 </body>
 </html>
