--- a/index.html
+++ b/index.html
@@ -15,6 +15,6 @@
       <li>Item 2</li>
     </ul>
   </div>
-  <textarea id="outputText" rows="5" cols="40"></textarea>
+  <h2 class="result">Result will appear here after you press Done.</h2>
 </body>
 </html>
