--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <head>
   <title>My New Website</title>
+  <link href="styles.css">
+  <script src="script.lua" />
 </head>
 <body>
   <h1>Welcome!</h1>
