--- a/index.html
+++ b/index.html
@@ -17,6 +17,6 @@
       <li>Item 2</li>
     </ul>
   </div>
-  <h2 class="result">Result will appear here after you press Done.</h2>
+  <h2 class="result">test</h2>
 </body>
 </html>
