--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
-  <button>Click Me!</button>
+  <button class="button1">Done</button>
   <hr>
   <img src="/path/to/image.jpg" alt="Image Description">
   <div>
