--- a/index.html
+++ b/index.html
@@ -7,16 +7,7 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
-  <button class="button1">Done</button>
-  <hr>
-  <img src="/path/to/image.jpg" alt="Image Description">
-  <div>
-    <h2>More Content</h2>
-    <ul>
-      <li>Item 1</li>
-      <li>Item 2</li>
-    </ul>
-  </div>
-  <h2 class="result">test</h2>
+  <button class="button1">Klick me!</button>
+  <h2 class="result">0</h2>
 </body>
 </html>
