--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
+  <input type="text" placeholder="User Name" class="update-input-ip">
   <button class="button1">Klick me!</button>
   <h2 class="result">0</h2>
 </body>
