--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
-  <input type="text" placeholder="User Name" class="update-input-ip">
-  <input type="text" placeholder="User Passwort" class="update-input-ip">
+  <input type="text" placeholder="User Name" class="user_n">
+  <input type="text" placeholder="User Passwort" class="user_p">
   <button class="button1">Login</button>
   <h2>!!!If not logtin the Progress will not be saved!!!</h2>
   <h2 class="result">0</h2>
