--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
   <p>This is a simple webpage built with the new protocol.</p>
   <input type="text" placeholder="User Name" class="user_n">
   <input type="text" placeholder="User Passwort" class="user_p">
-  <button class="button1">Login</button>
+  <button class="button_login">Login</button>
   <h2>!!!If not logtin the Progress will not be saved!!!</h2>
   <h2 class="result">0</h2>
   <button class="button1">Klick me!</button>
