--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
-  <input type="text" placeholder="User Name" id="user_n" />
-  <input type="password" placeholder="User Password" id="user_p" />
+  <input type="text" placeholder="User Name" id="user_n" /input>
+  <input type="password" placeholder="User Password" id="user_p" /input>
   <button id="button_login">Login</button>
   <h2>!!!If not logged in the Progress will not be saved!!!</h2>
   <h2 id="result">0</h2>
