--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 <body>
   <h1>Welcome!</h1>
   <p>This is a simple webpage built with the new protocol.</p>
-  <input type="text" placeholder="User Name" id="user_n" /input>
-  <input type="password" placeholder="User Password" id="user_p" /input>
-  <button id="button_login">Login</button>
-  <h2>!!!If not logged in the Progress will not be saved!!!</h2>
-  <h2 id="result">0</h2>
-  <button id="button1">Click me!</button>
+  <input type="text" placeholder="User Name" class="user_n">
+  <input type="text" placeholder="User Passwort" class="user_p">
+  <button class="button_login">Login</button>
+  <h2>!!!If not logtin the Progress will not be saved!!!</h2>
+  <h2 class="result">0</h2>
+  <button class="button1">Klick me!</button>
 </body>
 </html>
