--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <button class="button_login">Login</button>
   <h2>!!!If not logtin the Progress will not be saved!!!</h2>
   <h2 class="result">0</h2>
+  <h2 class="log">log:</h2>
   <button class="button1">Klick me!</button>
 </body>
 </html>
