--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <h1>Welcome!</h1>
-  <p>This is a simple webpage built with the new protocol.</p>
+  <p>This is a simple webpage built. And still under construction! :D</p>
   <input type="text" placeholder="User Name" class="user_n">
   <input type="text" placeholder="User Passwort" class="user_p">
   <button class="button_login">Login</button>
